fix: fixed overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,4 @@
 main{
-    margin-left: -1vw;
     background-color: rgb(245, 245, 245);
-    width: 101vw;
-    /* overflow: auto; */
-    overflow-x: auto;
-    /* position: fixed; */
+    width: 100vw;
 }
